Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45548

QProcess assert crash with setStandardOutputProcess

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.5.1
    • 5.4.1
    • Core: I/O
    • None
    • Windows 8 32bit
    • 507625d984f9467b056e603560d62a2e4a56074d

      setStandardOutputProcess fails to work as intended and results in the following assert error

      ASSERT: "channel->pipe[0] != INVALID_Q_PIPE" in file io\qprocess_win.cpp, line 561

      Example:
      QProcess *p1 = new QProcess();
      QProcess *p2 = new QProcess();

      p1->setStandardOutputProcess(p2);
      p2->start("bleh");
      p1->start("heh");

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            nullb Kai Rogers
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes